--- a/package.json
+++ b/package.json
@@ -2,12 +2,14 @@
   "name": "glance",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+ "scripts": {
+  "dev": "next dev",
+  "build": "next build",
+  "vercel-build": "npx prisma generate && next build",
+  "start": "next start",
+  "lint": "next lint",
+  "postinstall": "prisma generate"
+},
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
