--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "glance",
   "version": "0.1.0",
   "private": true,
- "scripts": {
-  "dev": "next dev",
-  "build": "next build",
-  "vercel-build": "npx prisma generate && next build",
-  "start": "next start",
-  "lint": "next lint",
-  "postinstall": "prisma generate"
-},
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "vercel-build": "npx prisma generate && next build",
+    "start": "next start",
+    "lint": "next lint",
+    "postinstall": "prisma generate"
+  },
   "prisma": {
     "seed": "tsx prisma/seed.ts"
   },
@@ -34,6 +34,7 @@
     "react-hot-toast": "^2.5.2",
     "swiper": "^11.2.6",
     "tailwind-merge": "^3.2.0",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zustand": "^5.0.4"
   },
